# DRF-personal-todo-list

./: .gitignore  README.md  pyproject.toml  user.txt
config/: settings.py  urls.py
todos/: admin.py  models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_username.py  0004_alter_user_username.py
