[tool.poetry]
name = "drf-personal-todo-list"
version = "0.1.0"
description = ""
authors = ["Hyuk Jun Kim <nmkk1234@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drf_personal_todo_list"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django = "^4.0.0"
django-cors-headers = "^3.14.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
